[tool.poetry]
name = "genlogin"
packages = [
    { include = "GenloginLib" },
]
version = "1.0.1"
description = "Library for genlogin python"
authors = ["hsxonz <hieuTran0812.work@gmail.com>"]
readme = "README.md"
repository = "https://github.com/hsxonz/lib_Genlogin_py"
homepage = "https://github.com/hsxonz/lib_Genlogin_py"
license = "MIT"
keywords = ["anti", "automation", "genlogin", "crawl", "browser"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pypi]
username = hsxonz
password = mA3b2i3S#_%2YLJ
